# dockerbuddy-agent

./: .env-example  .gitignore  Dockerfile  README.md  agent.py  build_exe  config-example.yaml  config.yaml  container_stats.csv  docker_scraper.py  influxdb_proxy.py  main.py  mock_agent.py  pyproject.toml  requirements.txt  run
mac-agent/: README.txt  apple_run.sh
releases/mac-agent/: run.sh
releases/mac-agentv1.1.0/: run.sh
src/agent/: agent.py  common.py  config-example.py  config.py  dataclasses.py  main.py  mock_agent.py  status_enum.py
