[tool.poetry]
name = "dockiera-agent"
version = "0.1.0"
description = ""
authors = ["bplewnia <bplewnia99@gmail.com>"]

packages = [
    { include="src", from="." },
]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^5.0.0"
psutil = "^5.8.0"
influxdb-client = "^1.20.0"
black = "^21.8b0"
isort = "^5.9.3"
pre-commit = "^2.14.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "src.agent.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
