[tool.poetry]
name = "dockiera-agent"
version = "0.1.0"
description = ""
authors = ["bplewnia <bplewnia99@gmail.com>"]

packages = [
    { include="src", from="." },
]

[tool.poetry.dependencies]
python = "3.8.10"
docker = "5.0.0"
psutil = "5.8.0"
black = "21.8b0"
isort = "5.9.3"
pre-commit = "2.14.1"
loguru = "0.5.3"
dataclasses-json = "0.5.5"
requests = "2.26.0"
pyinstaller = "4.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mock = "src.agent.main:run_mock_agent"
normal = "src.agent.main:run_normal_agent"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
